assets/css/rtl-basic-mobile.css
/* ... */
.checkbox-inline, .radio-inline {
     padding-left: 5px; 
}

@media only screen and (max-width: 780px){
table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
    padding-left: 3% !important;
}
table.responsive-table td span, table.responsive-table td span {
    position: relative !important;
   
}
}

table.display td.time {
     width: auto; 
}

.time span,.log span{
    float:right;

}


@media only screen and (max-width: 479px){
#audit-trail-wrapper .main .history table tbody tr td:first-child, #audit-trail-wrapper .main .history table tbody th:first-child {
     padding-left: 3% !important; 
    
}
}
.sig-type{
    right: 45px;
}



@media (orientation: landscape) {
    .signature-wrapper-displayonly .sign-here{
        width: unset !important;
    }

  }
  .modal.fade.esig-terms-modal-lg {
  background-color: rgb(0 0 0 / 50%);
  }
  @media only screen and (min-width: 768px){
  .rtl-sign-contracts{
    flex: 0.4 !important;
   
    }
  }

.signature-wrapper-displayonly-signed .signed {
      background-position: right bottom !important;
}  

.document-sign-page #audit-trail-wrapper .main .info .sign {
    border: none;
}

#audit-trail-wrapper .main .row {
    margin-bottom: 30px !important;
}

.dfc-image img {
    vertical-align: bottom !important; 
}

.row>*{
padding-right: 0px !important; 
padding-left: 0px !important; 
}

